mobile layout overflow on x axis fixed, stories right button added.

--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,8 @@ ion-icon {
     box-sizing: border-box;
     overflow: hidden;
     
+    position:relative;
+
     width: 100%;
     height: 118px;
 
@@ -131,6 +133,12 @@ ion-icon {
     line-height: 14px;
 
     text-align: center;
+}
+
+.left-button {
+    position: absolute;
+    right: 5px;
+    top: 45px;
 }
 
 /* SIDEBAR */
@@ -311,13 +319,19 @@ ion-icon {
     }
 }
 
+/* ainda falta terminar esse mobile aqui*/
 @media(max-width: 614px) {
     .content {
+        width: 100%;
         margin: 0px;
     }
 
+    .feed {
+        width: 100%;
+    }
+
     .stories-box {
-        margin: 15px 12px;
+        margin: 15px 0px;
         background-color: transparent;
         border: none;
         width: 100%;
